--- a/倦倦喵全集/menu.html
+++ b/倦倦喵全集/menu.html
@@ -9,9 +9,8 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A---%E7%B4%AB%E9%9F%B5%E4%BA%BA%E5%A6%BB-08-20">许岚 - 紫韵人妻</a></p> 
-  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9ALAN-%E9%86%89%E9%85%92OL-08-22">许岚LAN 醉酒OL</a></p>
-  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-OL-08-22">许岚 OL</a></p>
+  <p><a href="https://telegra.ph/%E5%80%A6%E5%80%A6%E5%96%B5-%E7%94%98%E9%9B%A8%E9%AD%85%E9%AD%94%E5%8E%9F%E7%A5%9E-08-22">倦倦喵 甘雨魅魔（原神）</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
