--- a/星之迟迟全集/menu.html
+++ b/星之迟迟全集/menu.html
@@ -63,15 +63,16 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-12-D-08-22">星之迟迟 2023-12-D 1</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-12-D-08-22-2">星之迟迟 2023-12-D 2</a></p> 
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-%E4%B8%87%E5%9C%A3%E8%8A%82%E7%89%B9%E5%88%AB%E4%BC%81%E5%88%92-%E9%9B%85%E5%8A%AA%E6%96%AF-Janus-%E3%82%B8%E3%82%A7%E3%83%BC%E3%83%8A%E3%82%B9-86P-08-22">星之迟迟 万圣节特别企划 雅努斯 Janus ジェーナス 86P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>   
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-12-AG-08-22">星之迟迟 2023-12-A&G 1</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-12-AG-08-22-2">星之迟迟 2023-12-A&G 2</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-12-B-08-22">星之迟迟 2023-12-B</a></p>   
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-%E4%B8%87%E5%9C%A3-%E5%8D%8E%E7%94%B2-08-22">星之迟迟 2023 万圣 华甲</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023%E5%9C%A3%E8%AF%9E%E7%B2%BE%E7%81%B5A-08-22">星之迟迟 2023圣诞精灵A</a></p>  
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023%E5%9C%A3%E8%AF%9E%E7%B2%BE%E7%81%B5A-08-22-2">星之迟迟 2023圣诞精灵A</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-23-%E5%9C%A3%E8%AF%9E%E7%B2%BE%E7%81%B5%E7%AF%87B-%E5%9C%A3%E8%AF%9E%E8%80%81%E4%BA%BA-106P1V-925M-08-22">星之迟迟 2023 圣诞精灵篇B 圣诞老人 [106P1V-925M]</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023%E5%9C%A3%E8%AF%9E%E7%B2%BE%E7%81%B5C-08-22">星之迟迟 2023圣诞精灵C</a></p>  
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-10-D-08-22">星之迟迟 2023-10-D</a></p>  
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-10-D-08-22-2">星之迟迟 2023-10-D</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
