--- a/一只废喵全集/menu.html
+++ b/一只废喵全集/menu.html
@@ -10,8 +10,8 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E4%B8%80%E5%8F%AA%E5%BA%9F%E5%96%B5---fantia2401%E8%AE%A2%E9%98%85-08-22">一只废喵 - fantia2401订阅</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B8%80%E5%8F%AA%E5%BA%9F%E5%96%B5---fantia2312%E8%AE%A2%E9%98%85-%E5%9C%A3%E8%AF%9E%E5%A5%B3%E5%AD%A9-08-22">一只废喵 - fantia2312订阅 圣诞女孩</a></p>
+  <p><a href="https://telegra.ph/%E4%B8%80%E5%8F%AA%E5%BA%9F%E5%96%B5---fantia2312%E8%AE%A2%E9%98%85-08-22">一只废喵 - fantia2312订阅</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
