--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -42,8 +42,8 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%B0%8F%E7%91%B6%E5%B9%BA%E5%B9%BA-%E7%94%98%E9%9B%A8%E7%94%B3%E9%B9%A4%E6%B5%B7%E7%81%AF%E8%8A%82%E5%8F%8C%E4%BA%BA%E8%87%AA%E6%8B%8D%E5%8E%9F%E7%A5%9E-08-22">九言 小瑶幺幺 甘雨申鹤海灯节双人自拍（原神</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%9C%A3%E8%AF%9E%E7%A4%BC%E7%89%A9-08-22">九言 圣诞礼物</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E8%9B%87%E5%96%B0%E6%A2%A6%E5%AD%90-36P5V-08-22">九言 蛇喰梦子 36P5V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%85%AB%E9%87%8D%E7%A5%9E%E5%AD%90%E8%87%AA%E6%8B%8D-35P5V-265MB-%E5%8E%9F%E7%A5%9E-08-22">九言 八重神子自拍 [35P5V-265MB] （原神）</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%B0%8F%E6%81%B6%E9%AD%94-08-22">九言 小恶魔</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
