--- a/布丁大法 米布丁&油布丁全集/menu.html
+++ b/布丁大法 米布丁&油布丁全集/menu.html
@@ -41,8 +41,8 @@
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-JK%E6%B0%B4%E6%89%8B%E6%9C%8D-126P2V-08-22">布丁大法 JK水手服 126P2V</a></p>
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-%E8%93%9D%E8%89%B2%E8%BF%9E%E4%BD%93%E6%B3%B3%E8%A1%A3-95P-08-22">布丁大法 蓝色连体泳衣 95P</a></p>
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-%E7%8C%AB%E7%88%AA%E5%8D%B0-08-22">布丁 猫爪印🐾</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-%E5%86%AC%E6%97%A5%E6%AF%9B%E8%A1%A3-116P4V-08-22">布丁大法 冬日毛衣 116P4V</a></p>  
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-MerryChristmas-08-22">布丁 Merry+Christmas🔔</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
