--- a/柒柒不可爱全集/menu.html
+++ b/柒柒不可爱全集/menu.html
@@ -10,8 +10,8 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%9F%92%E6%9F%92%E4%B8%8D%E5%8F%AF%E7%88%B1-%E5%B0%8F%E7%81%B0%E5%85%94-71P1V-08-22">柒柒不可爱 小灰兔 71P1V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%9F%92%E6%9F%92%E4%B8%8D%E5%8F%AF%E7%88%B1-Mewo-08-22">柒柒不可爱 Mewo</a></p>
+  <p><a href="https://telegra.ph/%E6%9F%92%E6%9F%92%E4%B8%8D%E5%8F%AF%E7%88%B1-%E7%B2%89%E8%89%B2%E6%B3%B3%E8%A1%A3-08-22">柒柒不可爱 粉色泳衣</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
