--- a/稚乖画册全集/menu.html
+++ b/稚乖画册全集/menu.html
@@ -9,9 +9,8 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A---%E7%B4%AB%E9%9F%B5%E4%BA%BA%E5%A6%BB-08-20">许岚 - 紫韵人妻</a></p> 
-  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9ALAN-%E9%86%89%E9%85%92OL-08-22">许岚LAN 醉酒OL</a></p>
-  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-OL-08-22">许岚 OL</a></p>
+  <p><a href="https://telegra.ph/%E7%A8%9A%E4%B9%96%E7%94%BB%E5%86%8C-%E6%99%B4%E7%A9%BA09-84P1V-129GB-08-22">稚乖画册 晴空09 [84P1V-1.29GB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
