--- a/蠢沫沫全集/menu.html
+++ b/蠢沫沫全集/menu.html
@@ -67,8 +67,8 @@
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-24%E5%B9%B42%E6%9C%88T3%E8%B5%A0%E9%80%81-%E5%8D%88%E5%90%8E-08-22">蠢沫沫 24年2月T3赠送 午后</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E7%91%B6%E7%91%B6-08-22">蠢沫沫 瑶瑶 (原神)</a></p>  
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E5%85%AC%E4%B8%BB%E8%A3%99-08-22">蠢沫沫 公主裙</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB%E5%A5%87%E9%81%87%E8%AE%B0-102P-105GB-08-22">《蠢沫沫奇遇记》① [102P-1.05GB]</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E5%A8%83%E5%A8%83%E6%9C%BA-85P-789MB-08-22">蠢沫沫 《娃娃机》 [85P-789MB]</a></p>  
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
