--- a/趴趴捣蛋陌全集/menu.html
+++ b/趴趴捣蛋陌全集/menu.html
@@ -9,10 +9,10 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A---%E7%B4%AB%E9%9F%B5%E4%BA%BA%E5%A6%BB-08-20">许岚 - 紫韵人妻</a></p> 
-  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9ALAN-%E9%86%89%E9%85%92OL-08-22">许岚LAN 醉酒OL</a></p>
-  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-OL-08-22">许岚 OL</a></p>
+  <p><a href="https://telegra.ph/%E8%B6%B4%E8%B6%B4%E6%8D%A3%E8%9B%8B%E9%99%8C-%E6%9F%B4%E9%83%A1-08-22">趴趴捣蛋陌 柴郡</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
 </body>
 </html>
