--- a/迷之呆梨全集/menu.html
+++ b/迷之呆梨全集/menu.html
@@ -16,6 +16,10 @@
   <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8---%E4%BB%8A%E6%97%A5%E3%81%AF%E4%BF%AE%E9%81%93%E5%A5%B3-37P-235MB-08-20">迷之呆梨 - 今日は修道女 37P 235MB</a></p>
   <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8---2024%E5%B9%B408%E6%9C%88-Fantia-08-21">迷之呆梨 - 2024年08月 Fantia</a></p>
   <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-%E8%87%AA%E6%92%AE%E3%82%8A%E5%86%99%E7%9C%9F-%E6%98%A5%E6%97%A5%E5%B0%91%E5%A5%B3-77P3V-444MB-08-22">迷之呆梨 自撮り写真 春日少女 [77P3V-444MB]</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-2024%E5%B9%B401%E6%9C%88-Fantia-1800%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-%E6%96%B0%E5%B9%B4%E5%BF%AB%E4%B9%90-08-22">迷之呆梨 2024年01月 Fantia 1800日圓訂閱內容 新年快乐</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-2024%E5%B9%B401%E6%9C%88-Fantia-1800%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9%E6%96%B0%E5%B9%B4%E5%BF%AB%E4%B9%90-08-22">迷之呆梨 2024年01月 Fantia 1800日圓訂閱內容 新年快乐</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-2024%E5%B9%B401%E6%9C%88-Fantia-1800%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-%E6%96%B0%E5%B9%B4%E5%BF%AB%E4%B9%90-08-22-2">迷之呆梨 2024年01月 Fantia 1800日圓訂閱內容 新年快乐</a></p>
+  <p><a href="https://telegra.ph/miko%E3%81%AE%E5%9C%A3%E8%AF%9E%E9%AD%94%E5%A5%B3-08-22">mikoの圣诞魔女</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
