--- a/星之迟迟全集/menu.html
+++ b/星之迟迟全集/menu.html
@@ -73,7 +73,7 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023%E5%9C%A3%E8%AF%9E%E7%B2%BE%E7%81%B5C-08-22">星之迟迟 2023圣诞精灵C</a></p>  
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-10-D-08-22">星之迟迟 2023-10-D</a></p>  
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-10-D-08-22-2">星之迟迟 2023-10-D</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-10-C-08-22">星之迟迟 2023-10-C</a></p>  
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
 </body>
