--- a/许岚LAN全集/menu.html
+++ b/许岚LAN全集/menu.html
@@ -12,7 +12,7 @@
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A---%E7%B4%AB%E9%9F%B5%E4%BA%BA%E5%A6%BB-08-20">许岚 - 紫韵人妻</a></p> 
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9ALAN-%E9%86%89%E9%85%92OL-08-22">许岚LAN 醉酒OL</a></p>
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-OL-08-22">许岚 OL</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9ALAN-%E7%B2%89%E8%89%B2%E9%95%BF%E8%A3%99-40P-296MB-08-22">许岚LAN 粉色长裙 [40P-296MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
