--- a/桜井宁宁全集/menu.html
+++ b/桜井宁宁全集/menu.html
@@ -54,6 +54,6 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E5%BF%8D%E8%80%85-74P-08-22">桜井宁宁 忍者 74P</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E8%B5%9B%E5%8D%9A%E5%B0%8F%E6%81%B6%E9%AD%94-85P-08-22">桜井宁宁 赛博小恶魔 85P</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-nikke%E6%8B%89%E6%AF%9771P-102GB-08-22">桜井宁宁 nikke拉毗71P 1.02GB</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81-%E7%99%BD%E8%89%B2%E7%83%AD%E8%A3%A4%E6%AF%94%E5%9F%BA%E5%B0%BC-70P-271GB-08-22">桜井宁宁 白色热裤比基尼 [70P-2.71GB]</a></p>
 </body>
 </html>
