--- a/rioko凉凉子全集/menu.html
+++ b/rioko凉凉子全集/menu.html
@@ -26,7 +26,7 @@
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E9%BE%99%E5%B9%B4%E9%BE%99%E5%9B%BE-08-22">凉凉子 龙年龙图</a></p>
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E5%9C%A3%E8%AF%9E%E6%96%B0%E5%B9%B4%E7%A4%BC%E7%89%A9-08-22">凉凉子 圣诞+新年礼物</a></p>
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E9%9B%B7%E6%A0%B9%E6%96%AF%E5%A0%A1-08-22l">凉凉子 雷根斯堡</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E4%B8%87%E5%9C%A3%E8%8A%82%E7%8C%AB%E7%8C%AB-08-23">凉凉子 万圣节猫猫</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
