--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -44,7 +44,7 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E8%9B%87%E5%96%B0%E6%A2%A6%E5%AD%90-36P5V-08-22">九言 蛇喰梦子 36P5V</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%85%AB%E9%87%8D%E7%A5%9E%E5%AD%90%E8%87%AA%E6%8B%8D-35P5V-265MB-%E5%8E%9F%E7%A5%9E-08-22">九言 八重神子自拍 [35P5V-265MB] （原神）</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%B0%8F%E6%81%B6%E9%AD%94-08-22">九言 小恶魔</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%8D%A1%E5%A4%AB%E5%8D%A1-08-23">九言 卡夫卡</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
