--- a/星之迟迟全集/menu.html
+++ b/星之迟迟全集/menu.html
@@ -74,7 +74,22 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-10-D-08-22">星之迟迟 2023-10-D</a></p>  
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-10-D-08-22-2">星之迟迟 2023-10-D</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-10-C-08-22">星之迟迟 2023-10-C</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-10-%E8%B5%A0%E5%93%81-08-23">星之迟迟 2023-10-赠品</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-10-B-08-23">星之迟迟 2023-10-B</a></p>  
+  <p><a href="">星之</a></p>
+  <p><a href="">星之</a></p>  
+  <p><a href="">星之</a></p>  
+  <p><a href="">星之</a></p>
+  <p><a href="">星之</a></p>  
+  <p><a href="">星之</a></p>  
+  <p><a href="">星之</a></p>
+  <p><a href="">星之</a></p>  
+  <p><a href="">星之</a></p>  
+  <p><a href="">星之</a></p>
+  <p><a href="">星之</a></p>  
+  <p><a href="">星之</a></p>  
+  <p><a href="">星之</a></p>
+  <p><a href="">星之</a></p>  
+  <p><a href="">星之</a></p>   
 </body>
 </html>
