--- a/水淼aqua全集/menu.html
+++ b/水淼aqua全集/menu.html
@@ -56,8 +56,8 @@
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-24%E5%B9%B401%E6%9C%88Fantia-%E3%83%80%E3%83%BC%E3%83%AA%E3%83%B3-57P-08-22">水淼Aqua 24年01月Fantia ダーリン 57P</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-24%E5%B9%B401%E6%9C%88%E4%BC%9A%E5%91%98%E8%AE%A2%E9%98%85-%E8%8F%B2%E4%BC%A6-48P-08-22">水淼Aqua 24年01月会员订阅 菲伦 48P</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BC-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-08-22">水淼 碧蓝航线</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BC-2b%E5%90%8C%E4%BA%BA%E7%A4%BC%E6%9C%8D-08-23">水淼 2b同人礼服</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-Fantia-2023%E5%B9%B411%E6%9C%88%E5%A5%97%E5%9B%BE-30P-34MB-08-23">水淼Aqua Fantia 2023年11月套图 [30P-34MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
