--- a/桜桃喵全集/menu.html
+++ b/桜桃喵全集/menu.html
@@ -23,7 +23,7 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-2023%E5%B9%B412%E6%9C%88-%E5%B8%8C%E5%A8%9C%E5%B0%8F%E5%A7%90-08-22">桜桃喵 2023年12月 希娜小姐</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-2023%E5%B9%B412%E6%9C%88-%E9%93%B6%E8%89%B2%E9%AB%98%E8%B7%9F%E9%9E%8B-26p-08-22">桜桃喵 2023年12月 银色高跟鞋 26p</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-2023%E5%B9%B412%E6%9C%88-%E9%9B%BE%E5%87%87%E8%9E%8D%E9%9B%AA-24p-08-22">桜桃喵 2023年12月 雾凇+融雪 24p</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E6%8D%86%E7%BB%91-08-23">桜桃喵 捆绑</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
