--- a/许岚LAN全集/menu.html
+++ b/许岚LAN全集/menu.html
@@ -13,6 +13,12 @@
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9ALAN-%E9%86%89%E9%85%92OL-08-22">许岚LAN 醉酒OL</a></p>
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-OL-08-22">许岚 OL</a></p>
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9ALAN-%E7%B2%89%E8%89%B2%E9%95%BF%E8%A3%99-40P-296MB-08-22">许岚LAN 粉色长裙 [40P-296MB]</a></p>
+  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-%E4%BF%84%E7%BD%97%E6%96%AF%E6%96%B9%E5%9D%97-08-23">许岚 俄罗斯方块</a></p>
+  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-%E6%B3%B3%E8%A3%85-08-23">许岚 泳装</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
