--- a/稚乖画册全集/menu.html
+++ b/稚乖画册全集/menu.html
@@ -10,7 +10,7 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E7%A8%9A%E4%B9%96%E7%94%BB%E5%86%8C-%E6%99%B4%E7%A9%BA09-84P1V-129GB-08-22">稚乖画册 晴空09 [84P1V-1.29GB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E7%A8%9A%E4%B9%96%E7%94%BB%E5%86%8C-%E6%99%B4%E7%A9%BA10-%E5%A4%9C%E5%A4%9C-%E7%99%BD%E4%B8%9D%E5%8F%8C%E9%A9%AC%E5%B0%BE-80P1V-185GB-08-23">稚乖画册 晴空10 夜夜 白丝双马尾 [80P1V-1.85GB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
