--- a/芦苇苇苇全集/menu.html
+++ b/芦苇苇苇全集/menu.html
@@ -9,11 +9,7 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E6%A3%AE%E7%BD%97%E8%B4%A2%E5%9B%A2-%E7%BB%86%E9%9B%AA-01E4K-103P-1V-375G-08-23">森罗财团 细雪 01E4K [103P-1V-3.75G]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%8A%A6%E8%8B%87%E8%8B%87%E8%8B%87-%E9%AD%94%E5%A4%AA%E9%83%8E%E5%92%8C%E6%9C%8D-26P-237MB-08-23">芦苇苇苇 魔太郎和服 26P 237MB</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
