--- a/Quan冉有点饿(拖拉大王)全集/menu.html
+++ b/Quan冉有点饿(拖拉大王)全集/menu.html
@@ -28,6 +28,12 @@
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF-%E9%AD%85%E9%AD%94%E5%85%9418P-08-22">Quan冉有点饿 魅魔兔18P</a></p>
   <p><a href="https://telegra.ph/quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF-%E5%B0%8F%E6%98%A5%E6%97%A5%E5%92%8C-54P-08-22">quan冉有点饿 小春日和 54P</a></p>
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF-%E7%BA%B3%E8%A5%BF%E5%A6%B2-46P-%E5%8E%9F%E7%A5%9E-08-22">Quan冉有点饿 纳西妲 46P (原神)</a></p>
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF-%E8%88%85%E5%A6%88-107P-705MB%E5%89%A7%E6%83%85%E7%89%88-08-23">Quan冉有点饿 舅妈 [107P-705MB]剧情版</a></p>
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF-%E8%88%85%E5%A6%88-107P-705MB%E7%BA%AF%E4%BA%AB%E7%89%88-08-23">Quan冉有点饿 舅妈 [107P-705MB]纯享版</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
