--- a/rioko凉凉子全集/menu.html
+++ b/rioko凉凉子全集/menu.html
@@ -27,6 +27,15 @@
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E5%9C%A3%E8%AF%9E%E6%96%B0%E5%B9%B4%E7%A4%BC%E7%89%A9-08-22">凉凉子 圣诞+新年礼物</a></p>
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E9%9B%B7%E6%A0%B9%E6%96%AF%E5%A0%A1-08-22l">凉凉子 雷根斯堡</a></p>
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E4%B8%87%E5%9C%A3%E8%8A%82%E7%8C%AB%E7%8C%AB-08-23">凉凉子 万圣节猫猫</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E6%9C%89%E7%82%B9%E9%82%A3%E4%B8%AA%E7%9A%84%E7%94%B3%E9%B9%A4%E5%8E%9F%E7%A5%9E-08-23">凉凉子 有点那个的申鹤（原神）</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E7%BE%8E%E8%89%B3%E5%B0%8F%E5%A6%88-08-23">凉凉子 美艳小妈</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
