--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -45,6 +45,16 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%85%AB%E9%87%8D%E7%A5%9E%E5%AD%90%E8%87%AA%E6%8B%8D-35P5V-265MB-%E5%8E%9F%E7%A5%9E-08-22">九言 八重神子自拍 [35P5V-265MB] （原神）</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%B0%8F%E6%81%B6%E9%AD%94-08-22">九言 小恶魔</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%8D%A1%E5%A4%AB%E5%8D%A1-08-23">九言 卡夫卡</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%96%9C%E5%A4%9A%E5%B7%9D%E5%85%94%E5%A5%B3%E9%83%8E-08-23">九言 喜多川兔女郎</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%89%91%E5%9C%A3%E7%9A%84%E7%A7%98%E8%AF%80-08-23">九言 剑圣的秘诀</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
