--- a/星之迟迟全集/menu.html
+++ b/星之迟迟全集/menu.html
@@ -76,9 +76,9 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-10-C-08-22">星之迟迟 2023-10-C</a></p>  
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-10-%E8%B5%A0%E5%93%81-08-23">星之迟迟 2023-10-赠品</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-10-B-08-23">星之迟迟 2023-10-B</a></p>  
-  <p><a href="">星之</a></p>
-  <p><a href="">星之</a></p>  
-  <p><a href="">星之</a></p>  
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-23%E5%B9%B410%E6%9C%88%E8%AE%A1%E5%88%92A-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF%E7%88%B1%E5%AE%95-50P-08-23">星之迟迟 23年10月计划A 碧蓝航线爱宕 50P</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-9-D-08-23">星之迟迟 2023-9-D</a></p>  
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-9-C-08-23">星之迟迟 2023-9-C</a></p>  
   <p><a href="">星之</a></p>
   <p><a href="">星之</a></p>  
   <p><a href="">星之</a></p>  
