--- a/水淼aqua全集/menu.html
+++ b/水淼aqua全集/menu.html
@@ -58,7 +58,7 @@
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BC-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-08-22">水淼 碧蓝航线</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BC-2b%E5%90%8C%E4%BA%BA%E7%A4%BC%E6%9C%8D-08-23">水淼 2b同人礼服</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-Fantia-2023%E5%B9%B411%E6%9C%88%E5%A5%97%E5%9B%BE-30P-34MB-08-23">水淼Aqua Fantia 2023年11月套图 [30P-34MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-Eula-162P-190MB-08-23">水淼Aqua Eula [162P-190MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
