--- a/迷之呆梨全集/menu.html
+++ b/迷之呆梨全集/menu.html
@@ -20,6 +20,12 @@
   <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-2024%E5%B9%B401%E6%9C%88-Fantia-1800%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9%E6%96%B0%E5%B9%B4%E5%BF%AB%E4%B9%90-08-22">迷之呆梨 2024年01月 Fantia 1800日圓訂閱內容 新年快乐</a></p>
   <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-2024%E5%B9%B401%E6%9C%88-Fantia-1800%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-%E6%96%B0%E5%B9%B4%E5%BF%AB%E4%B9%90-08-22-2">迷之呆梨 2024年01月 Fantia 1800日圓訂閱內容 新年快乐</a></p>
   <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-2023%E5%B9%B411%E6%9C%88-Fantia-1800%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-08-22">迷之呆梨 2023年11月 Fantia 1800日圓訂閱內容</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-2023%E5%B9%B410%E6%9C%88-Fantia-1800%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-08-23">迷之呆梨 2023年10月 Fantia 1800日圓訂閱內容 1</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-2023%E5%B9%B410%E6%9C%88-Fantia-1800%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-08-23-2">迷之呆梨 2023年10月 Fantia 1800日圓訂閱內容 2</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-2023%E5%B9%B409%E6%9C%88-Fantia-1800%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-08-23">迷之呆梨 2023年09月 Fantia 1800日圓訂閱內容 1</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-2023%E5%B9%B409%E6%9C%88-Fantia-1800%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-2-08-23">迷之呆梨 2023年09月 Fantia 1800日圓訂閱內容 2</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-2023%E5%B9%B409%E6%9C%88-Fantia-1800%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-3-08-23">迷之呆梨 2023年09月 Fantia 1800日圓訂閱內容 3</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-2023%E5%B9%B409%E6%9C%88-Fantia-1800%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-4-08-23">迷之呆梨 2023年09月 Fantia 1800日圓訂閱內容 4</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
