--- a/阿包也是兔娘全集/menu.html
+++ b/阿包也是兔娘全集/menu.html
@@ -19,6 +19,11 @@
   <p><a href="https://telegra.ph/%E9%98%BF%E5%8C%85%E4%B9%9F%E6%98%AF%E5%85%94%E5%A8%98-%E5%8A%A0%E5%86%95-%E4%BF%AE%E5%A5%B3-26P-08-22">阿包也是兔娘 加冕 修女 26P</a></p>
   <p><a href="https://telegra.ph/%E9%98%BF%E5%8C%85%E4%B9%9F%E6%98%AF%E5%85%94%E5%A8%98-%E6%96%B0%E6%98%A5%E4%BA%A4%E9%94%99%E6%88%98%E7%BA%BF-28P2V-08-22">阿包也是兔娘 新春交错战线 28P2V</a></p>
   <p><a href="https://telegra.ph/%E9%98%BF%E5%8C%85-%E7%8E%89%E8%97%BB%E5%96%B511%E6%9C%889%E6%89%93%E8%B5%8F%E7%BE%A4%E8%B5%84%E6%BA%90-08-23">阿包 玉藻喵</a></p>
+  <p><a href="https://telegra.ph/%E9%98%BF%E5%8C%85%E4%B9%9F%E6%98%AF%E5%85%94%E5%A8%98-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF%E9%98%BF%E8%AF%BA%E5%BE%B7-38P-161MB-08-23">阿包也是兔娘 碧蓝航线阿诺德 [38P-161MB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
