--- a/PoppaChan/menu.html
+++ b/PoppaChan/menu.html
@@ -19,7 +19,7 @@
   <p><a href="https://telegra.ph/PoppaChan---Tokoyami-Towa---Hololive-08-20">PoppaChan - Tokoyami Towa - Hololive</a></p>
   <p><a href="https://telegra.ph/PoppaChan-Miku-Rabbit-Hole-168P18V-08-22">PoppaChan Miku Rabbit Hole 168P18V</a></p>
   <p><a href="https://telegra.ph/PoppaChan-Jingliu-08-22">PoppaChan Jingliu</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/PoppaChan-Bailu-155P12V-08-23">PoppaChan Bailu 155P12V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
