--- a/女主K全集/menu.html
+++ b/女主K全集/menu.html
@@ -19,9 +19,9 @@
   <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E5%9C%A3%E8%AF%9E%E9%BA%8B%E9%B9%BF-100P1V-08-22">女主K 圣诞麋鹿 100P1V</a></p>
   <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E9%AD%94%E5%A5%B3%E3%81%AE%E6%97%A5%E5%B8%B8-92P1V-08-22">女主K 魔女の日常 92P1V</a></p>
   <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E4%BF%AE%E5%A5%B32-100P1V-08-22">女主K 修女2 100P1V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E4%BB%81%E5%A6%BB%E7%9A%84%E7%A7%98%E5%AF%86-80P-08-23">女主K 仁妻的秘密 80P</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E5%8F%AF%E7%88%B1%E7%9A%84%E5%88%B6%E6%9C%8D-99P1V-08-23">女主K 可爱的制服 99P1V</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E8%B1%B9%E7%BA%B9%E5%86%85%E8%A1%A3-100P-08-23">女主K 豹纹内衣 100P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
