--- a/屿鱼全集/menu.html
+++ b/屿鱼全集/menu.html
@@ -37,6 +37,10 @@
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E6%81%B0%E5%B7%B4%E8%80%B6%E5%A4%AB-08-22">屿鱼 恰巴耶夫</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E6%9F%B4%E9%83%A1-08-22">屿鱼 碧蓝航线 柴郡</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E9%BB%91%E7%BB%BF-24P-387M-08-22">屿鱼 黑绿 24P 387M</a></p>
+  <p><a href="http://telegra.ph/%E5%B1%BF%E9%B1%BC-Zero-Two-08-23">屿鱼 Zero Two</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-Asuma-Toki-Bunny-08-23">屿鱼 Asuma Toki Bunny</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
