--- a/末夜787全集/menu.html
+++ b/末夜787全集/menu.html
@@ -11,8 +11,9 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C787---%E5%A5%B3%E4%BB%86%E8%87%AA%E6%8B%8D-24P3V-233M-08-19">末夜787 - 女仆自拍 [24P3V-233M]</a></p> 
   <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C787---95%E5%BC%8F%E5%A9%9A%E7%BA%B1-34P-634MB-08-21">末夜787 - 95式婚纱 [34P-634MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C787-%E7%89%9B%E7%89%9B%E5%8E%A8%E5%A8%9864P4V-08-23">末夜787 牛牛厨娘64P4V</a></p>
+  <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C787-%E9%BB%91%E8%89%B2%E6%BC%86%E7%9A%AE%E5%85%94%E5%A5%B3%E9%83%8E-08-23">末夜787 黑色漆皮兔女郎</a></p>
+  <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C787-%E8%88%B0%E9%95%BF-%E8%95%BE%E5%A7%86-42P-08-23">末夜787 舰长 蕾姆 42P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
