--- a/洛璃LoLiSAMA全集/menu.html
+++ b/洛璃LoLiSAMA全集/menu.html
@@ -13,7 +13,7 @@
   <p><a href="https://telegra.ph/%E6%B4%9B%E7%92%83-LoLiSAMA---%E9%9A%94%E5%A3%81%E5%A4%AA%E5%A4%AA-113P-285GB-08-20">洛璃 LoLiSAMA - 隔壁太太 [113P-2.85GB]</a></p>
   <p><a href="https://telegra.ph/%E6%B4%9B%E7%92%83LoLiSAMA-%E7%94%B3%E9%B9%A4-83P1V-%E5%8E%9F%E7%A5%9E-08-22">洛璃LoLiSAMA 申鹤 83P1V (原神)</a></p>
   <p><a href="https://telegra.ph/%E6%B4%9B%E7%92%83LoLiSAMA-%E4%BA%BA%E9%B1%BC-85P-08-22">洛璃LoLiSAMA 人鱼 85P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%B4%9B%E7%92%83LoLiSAMA-%E5%9F%83%E5%A7%86%E7%99%BB-53P-08-23">洛璃LoLiSAMA 埃姆登 53P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
