--- a/莉犬酱全集/menu.html
+++ b/莉犬酱全集/menu.html
@@ -9,8 +9,10 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E6%98%AF%E4%BE%9D%E9%85%B1%E5%90%96---%E9%BB%91%E7%8B%BC-34P2V-134M-08-19">是依酱吖 - 黑狼 [34P2V-134M]</a></p> 
-  <p><a href="https://telegra.ph/%E4%BE%9D%E9%85%B1-23-%E5%8D%81%E4%BA%8C%E6%9C%88%E7%9A%84%E4%B8%B0%E6%BB%A1-08-22">依酱 23 十二月的丰满</a></p>
+  <p><a href="https://telegra.ph/%E8%8E%89%E7%8A%AC%E9%85%B1-%E8%B5%9B%E5%8D%9A%E6%9C%8B%E5%85%8B-08-23">莉犬酱 赛博朋克</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
