--- a/蠢沫沫全集/menu.html
+++ b/蠢沫沫全集/menu.html
@@ -69,13 +69,13 @@
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E5%85%AC%E4%B8%BB%E8%A3%99-08-22">蠢沫沫 公主裙</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB%E5%A5%87%E9%81%87%E8%AE%B0-102P-105GB-08-22">《蠢沫沫奇遇记》① [102P-1.05GB]</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E5%A8%83%E5%A8%83%E6%9C%BA-85P-789MB-08-22">蠢沫沫 《娃娃机》 [85P-789MB]</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E9%AD%85%E9%AD%94-08-23">蠢沫沫 魅魔</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-08-23">蠢沫沫</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E7%A9%B9%E5%A6%B9-08-23">蠢沫沫 穹妹</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E5%85%89-08-23">蠢沫沫 光</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E6%B2%99%E6%BC%A0%E7%8B%90-08-23">蠢沫沫 沙漠狐</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E5%92%96%E5%95%A1%E5%8E%85-08-23">蠢沫沫 咖啡厅</a></p>  
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E6%98%A5-08-23">蠢沫沫 春</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>
