--- a/隼隼子全集/menu.html
+++ b/隼隼子全集/menu.html
@@ -8,7 +8,7 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E9%9A%BC%E9%9A%BC%E5%AD%90---%E9%98%BF%E5%B0%94%E6%B1%89%E6%A0%BC%E5%B0%94%E6%96%AF%E5%85%8B-08-20">隼隼子 - 阿尔汉格尔斯克</a></p>
   <p><a href="https://telegra.ph/%E9%9A%BC%E9%9A%BC%E5%AD%90-%E7%81%B0%E7%83%AC%E6%88%98%E7%BA%BF-FW190-53P-08-22">隼隼子 灰烬战线 FW190 53P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E9%9A%BC%E9%9A%BC%E5%AD%90-%E7%81%B0%E7%83%AC%E6%88%98%E7%BA%BF-FW-190A-53P-443MB-08-23">隼隼子 灰烬战线 FW-190A [53P-443MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
