--- a/Natsuko夏夏子全集/menu.html
+++ b/Natsuko夏夏子全集/menu.html
@@ -43,8 +43,8 @@
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E9%BE%99%E5%B9%B4%E6%96%B0%E6%98%A5-45P-08-22">Natsuko夏夏子 龙年新春 45P</a></p>
   <p><a href="https://telegra.ph/%E5%A4%8F%E5%A4%8F%E5%AD%90-%E7%A7%81%E6%88%BF34Natsuko%E5%9C%A3%E8%AF%9E%E9%9B%AA%E7%B2%BE%E7%81%B5-08-22">夏夏子 私房34【Natsuko】圣诞雪精灵</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E9%80%8F%E6%98%8E%E5%A5%B3%E4%BB%86-76P-844MB-08-23">Natsuko夏夏子 透明女仆 [76P-844MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Natsuko-%E5%A4%8F%E5%A4%8F%E5%AD%90-%E7%A5%88%E6%84%BF%E5%B7%AB%E5%A5%B3-54P-08-23">Natsuko_夏夏子 祈愿巫女 54P</a></p>
+  <p><a href="https://telegra.ph/%E7%A7%8B%E5%92%8C%E6%9F%AF%E5%9F%BA%E5%A4%8F%E5%A4%8F%E5%AD%90-%E7%B1%B3%E5%93%88%E6%8B%89%E5%B0%A4%E5%A6%AE-08-23">秋和柯基&夏夏子 米哈拉&尤妮</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
