--- a/Sayo Momo(SayoMomo)全集/menu.html
+++ b/Sayo Momo(SayoMomo)全集/menu.html
@@ -21,7 +21,7 @@
   <p><a href="https://telegra.ph/Sayo-Momo-Esdeath-sama-%E3%82%A8%E3%82%B9%E3%83%87%E3%82%B9-AKAME-GA-KILL-08-22">Sayo Momo Esdeath sama エスデス AKAME GA KILL</a></p>
   <p><a href="https://telegra.ph/SayoMomo-Azur-Lane-Aegir-71P5V-896MB-08-22">SayoMomo Azur Lane Aegir [71P5V-896MB]</a></p>
   <p><a href="https://telegra.ph/Sayo-Momo-HSR-Topaz-%E3%83%88%E3%83%91%E3%83%BC%E3%82%BA-08-22">Sayo Momo HSR Topaz トパーズ</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Sayo-Momo-Shenhe-Goddess-69P-08-23">Sayo Momo Shenhe Goddess 69P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
