--- a/byoru全集/menu.html
+++ b/byoru全集/menu.html
@@ -34,7 +34,7 @@
   <p><a href="https://telegra.ph/Byoru-Phone-Set-45P4V-08-22">Byoru Phone Set 45P4V</a></p>
   <p><a href="https://telegra.ph/Byoru-Misa-Amane-Death-Note-61P8V-08-22">Byoru Misa Amane Death Note 61P8V</a></p>  
   <p><a href="https://telegra.ph/Byoru-KMS-Regensburg-08-22">Byoru KMS Regensburg</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Byoru-AdaWong-61P7V-08-23">Byoru AdaWong 61P7V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
