--- a/rioko凉凉子全集/menu.html
+++ b/rioko凉凉子全集/menu.html
@@ -29,9 +29,9 @@
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E4%B8%87%E5%9C%A3%E8%8A%82%E7%8C%AB%E7%8C%AB-08-23">凉凉子 万圣节猫猫</a></p>
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E6%9C%89%E7%82%B9%E9%82%A3%E4%B8%AA%E7%9A%84%E7%94%B3%E9%B9%A4%E5%8E%9F%E7%A5%9E-08-23">凉凉子 有点那个的申鹤（原神）</a></p>
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E7%BE%8E%E8%89%B3%E5%B0%8F%E5%A6%88-08-23">凉凉子 美艳小妈</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E6%81%B0%E5%B7%B4%E8%80%B6%E5%A4%AB%E7%A4%BC%E6%9C%8D-08-23">凉凉子 恰巴耶夫礼服</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-American-ass-08-23">凉凉子 American ass</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E5%92%8C%E5%89%8D%E8%BE%88%E4%B8%80%E8%B5%B7%E5%87%BA%E5%B7%AE%E5%90%A7-08-23">凉凉子 和前辈一起出差吧</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
