--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -47,12 +47,12 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%8D%A1%E5%A4%AB%E5%8D%A1-08-23">九言 卡夫卡</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%96%9C%E5%A4%9A%E5%B7%9D%E5%85%94%E5%A5%B3%E9%83%8E-08-23">九言 喜多川兔女郎</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%89%91%E5%9C%A3%E7%9A%84%E7%A7%98%E8%AF%80-08-23">九言 剑圣的秘诀</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%81%9C%E4%BA%91-08-23">九言 停云</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%A4%AA%E5%A4%AA-08-23">九言 太太</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%B0%8F%E7%91%B6%E5%B9%BA%E5%B9%BA-%E9%96%93%E8%AB%9Cx%E5%AE%B6%E6%97%8F-Spy-x-Family-62P-08-23">九言 小瑶幺幺 間諜x家族 Spy x Family 62P</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E9%9B%B7%E7%94%B5%E5%B0%86%E5%86%9B-31P5V-350MB-%E5%8E%9F%E7%A5%9E-08-23">九言 雷电将军 [31P5V-350MB] (原神)</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E7%8E%9B%E4%BF%AE-23P2V-08-23">九言 玛修 23P2V</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E4%BC%98%E8%8F%88-08-23">九言 优菈 （原神）</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
