--- a/小瑶幺幺全集/menu.html
+++ b/小瑶幺幺全集/menu.html
@@ -22,7 +22,7 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%B0%8F%E7%91%B6%E5%B9%BA%E5%B9%BA-%E7%94%98%E9%9B%A8%E7%94%B3%E9%B9%A4%E6%B5%B7%E7%81%AF%E8%8A%82%E5%8F%8C%E4%BA%BA%E8%87%AA%E6%8B%8D%E5%8E%9F%E7%A5%9E-08-22">九言 小瑶幺幺 甘雨申鹤海灯节双人自拍（原神）</a></p>
   <p><a href="https://telegra.ph/%E5%B0%8F%E7%91%B6%E5%B9%BA%E5%B9%BA-%E8%8A%99%E5%AE%81%E5%A8%9C%E8%87%AA%E6%8B%8D-08-22">小瑶幺幺 芙宁娜自拍 （原神）</a></p>
   <p><a href="https://telegra.ph/%E5%B0%8F%E7%91%B6%E5%B9%BA%E5%B9%BA-%E7%90%B3%E5%A6%AE%E7%89%B9-08-22">小瑶幺幺 琳妮特</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%B0%8F%E7%91%B6%E5%B9%BA%E5%B9%BA-%E9%96%93%E8%AB%9Cx%E5%AE%B6%E6%97%8F-Spy-x-Family-62P-08-23">九言 小瑶幺幺 間諜x家族 Spy x Family 62P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
