--- a/年年全集/menu.html
+++ b/年年全集/menu.html
@@ -35,8 +35,8 @@
   <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4-%E6%8B%9C%E5%B9%B4%E5%85%94-39P-08-22">年年 拜年兔 39P</a></p>
   <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4-%E6%96%B0%E5%B9%B4%E5%A5%BD-08-22">年年 新年好</a></p>
   <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4-%E7%88%B1%E5%90%83%E6%A3%92%E6%A3%92%E7%B3%96%E7%9A%84%E5%B0%91%E5%A5%B3-08-23">年年 爱吃棒棒糖的少女</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4-%E7%A7%8B%E5%85%AE44p-%E6%B1%89%E6%9C%8D-08-23">年年 秋兮44p (汉服)</a></p>
+  <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4-%E8%B5%9B%E5%8D%9A%E5%A5%B3%E5%AD%A9-44P-697MB-08-23">年年 赛博女孩 [44P-697MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
