--- a/杏仁曲奇全集/menu.html
+++ b/杏仁曲奇全集/menu.html
@@ -10,6 +10,11 @@
   <p><a href="https://telegra.ph/%E6%9D%8F%E4%BB%81%E6%9B%B2%E5%A5%87-%E5%A5%B3%E4%BB%86%E7%BA%A6%E5%AE%9A%E6%97%B6%E9%97%B4-48P-08-22">杏仁曲奇 女仆约定时间 48P</a></p>
   <p><a href="https://telegra.ph/%E6%9D%8F%E4%BB%81%E6%9B%B2%E5%A5%87-%E7%94%9F%E5%BE%92%E4%BC%9A%E5%9D%8F%E7%8C%AB%E7%8C%AB-52P-08-22">杏仁曲奇 生徒会坏猫猫 52P</a></p>
   <p><a href="https://telegra.ph/%E6%9D%8F%E4%BB%81%E6%9B%B2%E5%A5%87-%E9%BB%91%E5%85%BD-%E7%B2%BE%E7%81%B5%E5%A5%B3%E7%8E%8B-60P-08-22">杏仁曲奇 黑兽 精灵女王 60P</a></p>
+  <p><a href="https://telegra.ph/%E6%9D%8F%E4%BB%81%E6%9B%B2%E5%A5%87-OL%E9%A2%9D%E5%A4%96%E6%97%B6%E9%97%B4-61P-315MB-08-23">杏仁曲奇 OL额外时间 [61P-315MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%9D%8F%E4%BB%81%E6%9B%B2%E5%A5%87-%E7%9C%BC%E9%95%9C%E5%A8%98%E9%AB%98%E5%8F%89%E5%A5%B3%E4%BB%86-35P-190MB-08-23">杏仁曲奇 眼镜娘高叉女仆 [35P-190MB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
