--- a/果咩酱w全集/menu.html
+++ b/果咩酱w全集/menu.html
@@ -11,5 +11,10 @@
   <p><a href="https://telegra.ph/%E6%9E%9C%E5%92%A9%E9%85%B1w---%E4%B8%87%E5%9C%A3%E8%8A%82-%E5%B0%8F%E6%81%B6%E9%AD%94-50P-274MB-08-20">果咩酱w - 万圣节 小恶魔 [50P-274MB]</a></p>
   <p><a href="https://telegra.ph/%E6%9E%9C%E5%92%A9%E9%85%B1w---%E5%9C%A3%E8%AF%9E-%E9%BB%91%E4%B8%9D28P3V-144M-08-20">果咩酱w - 圣诞 黑丝[28P3V-144M]</a></p>
   <p><a href="https://telegra.ph/%E6%9E%9C%E5%92%A9%E9%85%B1-%E7%B2%89%E8%89%B2%E6%9C%BA%E7%94%B2-08-20">果咩酱 粉色机甲</a></p>
+  <p><a href="https://telegra.ph/%E6%9E%9C%E5%92%A9%E9%85%B1w-%E9%BA%BB%E8%A1%A3%E6%A0%A1%E6%9C%8D-30P-08-23">果咩酱w 麻衣校服 30P</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
