--- a/桜桃喵全集/menu.html
+++ b/桜桃喵全集/menu.html
@@ -26,8 +26,8 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E6%8D%86%E7%BB%91-08-23">桜桃喵 捆绑</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E6%8B%A5%E8%B1%B9-69P1V-191GB-08-23">桜桃喵 拥豹 [69P1V-1.91GB]</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-2b%E8%8A%B1%E5%AB%81-69P-152GB-08-23">桜桃喵 2b花嫁 [69P-1.52GB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E6%A1%83%E5%AD%90-48P-08-23">桜桃喵 桃子 48P</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E7%BA%A2%E6%B3%A2%E7%82%B9-45P-08-23">桜桃喵 红波点 45P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
