--- a/水淼aqua全集/menu.html
+++ b/水淼aqua全集/menu.html
@@ -59,9 +59,8 @@
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BC-2b%E5%90%8C%E4%BA%BA%E7%A4%BC%E6%9C%8D-08-23">水淼 2b同人礼服</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-Fantia-2023%E5%B9%B411%E6%9C%88%E5%A5%97%E5%9B%BE-30P-34MB-08-23">水淼Aqua Fantia 2023年11月套图 [30P-34MB]</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-Eula-162P-190MB-08-23">水淼Aqua Eula [162P-190MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BC-%E5%A6%AE%E9%9C%B2-%E5%8E%9F%E7%A5%9E-08-23">水淼 妮露 (原神)</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BC-%E9%A3%9E%E9%B8%9F%E9%A9%AC%E6%97%B6-08-23">水淼 飞鸟马时</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
