--- a/神沢永莉全集/menu.html
+++ b/神沢永莉全集/menu.html
@@ -19,6 +19,11 @@
   <p><a href="https://telegra.ph/%E7%A5%9E%E6%B2%A2%E6%B0%B8%E8%8E%89-%E5%A5%B3%E4%BB%86%E6%AD%BB%E5%BA%93%E6%B0%B4-39P-08-22">神沢永莉 女仆死库水 39P</a></p>
   <p><a href="https://telegra.ph/%E7%A5%9E%E6%B2%A2%E6%B0%B8%E8%8E%89-%E5%9C%A3%E8%AF%9E%E7%A4%BC%E7%89%A9-73P10V-08-22">神沢永莉 圣诞礼物 73P10V</a></p>
   <p><a href="https://telegra.ph/%E7%A5%9E%E6%B2%A2%E6%B0%B8%E8%8E%89-%E5%8D%8A%E5%8F%8C%E9%A9%AC%E5%B0%BE%E4%BD%93%E6%93%8D%E6%9C%8D%E5%A4%A7%E8%85%BF%E8%A2%9C-68P-211MB-08-22">神沢永莉 半双马尾体操服大腿袜 [68P-211MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%A5%9E%E6%B2%A2%E6%B0%B8%E8%8E%89-%E4%B8%87%E5%9C%A3%E8%8A%82%E7%B2%89%E6%AF%9B%E5%B0%8F%E6%81%B6%E9%AD%94-41P-302M-08-23">神沢永莉 万圣节粉毛小恶魔 [41P-302M]</a></p>
+  <p><a href="https://telegra.ph/%E7%A5%9E%E6%B2%A2%E6%B0%B8%E8%8E%89-%E5%AE%B6%E5%BA%AD%E4%BD%9C%E4%B8%9A73P-08-23">神沢永莉 家庭作业73P</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
