--- a/落落Raku全集/menu.html
+++ b/落落Raku全集/menu.html
@@ -15,8 +15,8 @@
   <p><a href="https://telegra.ph/%E8%90%BD%E8%90%BDRaku-%E5%83%95%E3%82%89%E3%81%AELIVE-%E5%90%9B%E3%81%A8%E3%81%AELIFE-08-22">落落Raku 僕らのLIVE 君とのLIFE</a></p>
   <p><a href="https://telegra.ph/%E8%90%BD%E8%90%BDRaku-Nya-Nya-Nya-47P-08-23">落落Raku Nya! Nya! Nya! 47P</a></p>
   <p><a href="https://telegra.ph/%E8%90%BD%E8%90%BDRaku-%E5%B0%8F%E3%81%95%E3%81%AA%E6%81%8B%E3%81%AE%E3%81%86%E3%81%9F-08-23">落落Raku 小さな恋のうた</a></p>
-<p><a href="../index.html">返回总目录</a></p>
-<p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%90%BD%E8%90%BDRaku-%E6%88%90-%E4%BA%BA-%E5%BC%8F-08-23">落落Raku 成_人_式</a></p>
+  <p><a href="https://telegra.ph/%E8%90%BD%E8%90%BDRaku-Happy-Birthday-Raku-08-23">落落Raku Happy Birthday, Raku!!</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 				  
