--- a/许岚LAN全集/menu.html
+++ b/许岚LAN全集/menu.html
@@ -15,10 +15,10 @@
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9ALAN-%E7%B2%89%E8%89%B2%E9%95%BF%E8%A3%99-40P-296MB-08-22">许岚LAN 粉色长裙 [40P-296MB]</a></p>
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-%E4%BF%84%E7%BD%97%E6%96%AF%E6%96%B9%E5%9D%97-08-23">许岚 俄罗斯方块</a></p>
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-%E6%B3%B3%E8%A3%85-08-23">许岚 泳装</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-%E7%BA%AF%E6%AC%B2%E5%90%8A%E5%B8%A6-08-23">许岚 纯欲吊带</a></p>
+  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-%E7%99%BD%E4%B8%9D%E8%93%9D%E8%A3%99-08-23">许岚 白丝蓝裙</a></p>
+  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9ALAN-%E5%8D%8A%E9%80%8F%E6%AF%9B%E8%A1%A3-40P-08-23">许岚LAN 半透毛衣 40P</a></p>
+  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-%E9%BB%91%E4%B8%9D%E6%8A%A4%E5%A3%AB-40P-753M-08-23">许岚 黑丝护士 [40P-753M]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
