--- a/蠢沫沫全集/menu.html
+++ b/蠢沫沫全集/menu.html
@@ -76,11 +76,11 @@
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E6%B2%99%E6%BC%A0%E7%8B%90-08-23">蠢沫沫 沙漠狐</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E5%92%96%E5%95%A1%E5%8E%85-08-23">蠢沫沫 咖啡厅</a></p>  
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E6%98%A5-08-23">蠢沫沫 春</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>   
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E6%9C%A8%E7%AE%B1-08-23">蠢沫沫 木箱</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E5%A5%B3%E7%A5%9E%E6%A5%BD%E5%9C%92-08-23">蠢沫沫 女神楽園</a></p>  
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E7%89%9B%E7%89%9B%E5%A5%B3%E4%BB%86-08-23">蠢沫沫 牛牛女仆</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E8%AF%BE%E9%97%B4-08-23">蠢沫沫 课间</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E5%8D%88%E5%90%8E%E8%AF%BE%E9%97%B4-08-23">蠢沫沫 午后课间</a></p>   
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
