--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -53,9 +53,9 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E9%9B%B7%E7%94%B5%E5%B0%86%E5%86%9B-31P5V-350MB-%E5%8E%9F%E7%A5%9E-08-23">九言 雷电将军 [31P5V-350MB] (原神)</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E7%8E%9B%E4%BF%AE-23P2V-08-23">九言 玛修 23P2V</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E4%BC%98%E8%8F%88-08-23">九言 优菈 （原神）</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E7%8E%9B%E5%A5%87%E7%8E%9B%E6%8A%A4%E5%A3%AB-08-23">九言 玛奇玛护士</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E4%BC%98%E8%8F%88%E8%87%AA%E6%8B%8D-31P4V-%E5%8E%9F%E7%A5%9E-08-23">九言 优菈自拍 31P4V （原神）</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%B7%AB%E5%A5%B3%E7%9A%84%E7%88%B1-08-23">九言 巫女的爱</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
