--- a/日奈娇全集/menu.html
+++ b/日奈娇全集/menu.html
@@ -36,8 +36,8 @@
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E6%9C%AA%E4%BA%A1%E4%BA%BA%E9%9B%AA%E5%A5%B3-175P6V-08-22">日奈娇 未亡人雪女 175P6V</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E8%8C%B6%E6%B0%B4%E9%97%B4-150P5V-08-22">日奈娇 茶水间 150P5V</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E5%BE%A1%E5%B8%81%E5%B7%AB%E5%A5%B3-131P-08-22">日奈娇 御币巫女 131P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E7%A2%A7%E8%93%9D%E6%A1%A3%E6%A1%88%E5%A6%83%E5%92%B2-92P-492MB-08-23">日奈娇 碧蓝档案妃咲 [92P-492MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%88%87%E5%88%87celia-%E9%9B%85%E5%84%BF%E8%B4%9D%E5%BE%B7-39P-08-23">切切celia 雅儿贝德 39P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
