--- a/星之迟迟全集/menu.html
+++ b/星之迟迟全集/menu.html
@@ -84,10 +84,10 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-8-C-08-23">星之迟迟 2023-8-C</a></p>  
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-8-B-08-23">星之迟迟 2023-8-B</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-8-A-08-23">星之迟迟 2023-8-A</a></p>  
-  <p><a href="">星之</a></p>  
-  <p><a href="">星之</a></p>
-  <p><a href="">星之</a></p>  
-  <p><a href="">星之</a></p>  
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-5%E6%9C%88%E8%AE%A1%E5%88%92-08-23">星之迟迟 2023 5月计划</a></p>  
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-5%E6%9C%88%E8%AE%A1%E5%88%92-2-08-23">星之迟迟 2023 5月计划 2</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-5%E6%9C%88%E8%AE%A1%E5%88%92-3-08-23">星之迟迟 2023 5月计划 3</a></p>  
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-5%E6%9C%88%E8%AE%A1%E5%88%92-4-08-23">星之迟迟 2023 5月计划 4</a></p>  
   <p><a href="">星之</a></p>
   <p><a href="">星之</a></p>  
   <p><a href="">星之</a></p>   
