--- a/末夜787全集/menu.html
+++ b/末夜787全集/menu.html
@@ -14,7 +14,7 @@
   <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C787-%E7%89%9B%E7%89%9B%E5%8E%A8%E5%A8%9864P4V-08-23">末夜787 牛牛厨娘64P4V</a></p>
   <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C787-%E9%BB%91%E8%89%B2%E6%BC%86%E7%9A%AE%E5%85%94%E5%A5%B3%E9%83%8E-08-23">末夜787 黑色漆皮兔女郎</a></p>
   <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C787-%E8%88%B0%E9%95%BF-%E8%95%BE%E5%A7%86-42P-08-23">末夜787 舰长 蕾姆 42P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C787-%E8%88%B0%E9%95%BF-%E6%9F%B4%E9%83%A1%E6%B3%B3%E8%A3%85-31P-08-23">末夜787 舰长 柴郡泳装 31P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
